--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -27,7 +27,7 @@ jobs:
         id: auth
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.SA_CREDS }}''
+          credentials_json: "${{ secrets.SA_CREDS }}"
 
       - name: Configure Docker to use gcloud
         run: |-
