--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -7,7 +7,7 @@ on:
 env:
   PROJECT_ID: c241-ps120
   GAR_LOCATION: asia-southeast2
-  SERVICE: article-service
+  SERVICE: article-service  # the image name will be the same as the service name
   REGION: asia-southeast2
   ENVIRONMENT: production
 
@@ -23,12 +23,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # NOTE: Alternative option - authentication via credentials json
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: "${{ secrets.SA_CREDS }}"
+          token_format: 'access_token'
+          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
+          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
       - name: Configure Docker to use gcloud
         run: |-
