--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -9,6 +9,7 @@ env:
   GAR_LOCATION: asia-southeast2
   SERVICE: model-service
   REGION: asia-southeast2
+  PRODUCTION: true
 
 jobs:
   deploy:
@@ -49,10 +50,11 @@ jobs:
           region: ${{ env.REGION }}
           # NOTE: If using a pre-built image, update the image name here
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}
+          env-vars: |-
+            PRODUCTION=${{ env.PRODUCTION }}
           flags: |-
             --allow-unauthenticated
             --service-account=${{ secrets.SA_SERVICE }}
-            --args=[--port=5000]
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
