add CI/CD with Cloud Run

--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -59,6 +59,7 @@ jobs:
           flags: |-
             --allow-unauthenticated
             --service-account=${{ secrets.SA_SERVICE }}
+            --memory=2Gi
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
