--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -59,7 +59,7 @@ jobs:
           flags: |-
             --allow-unauthenticated
             --service-account=${{ secrets.SA_SERVICE }}
-            --memory=2Gi
+            --memory=512Mi
             --cpu=1
 
       # If required, use the Cloud Run url output in later steps
